--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 *.o
 *.so
 *.swp
+*.old
+*.bak
+*.kate-swp
 *.dylib
 *.dSYM
 *.dll
@@ -11,16 +14,18 @@
 *.dummy
 *.exe
 *-test
-/bin/main
-/bin/test-internal
-/bin/test-external
+/target/main
+/target/test-internal
+/target/test-external
 /doc/
 /target/
 /build/
 /.rust/
 rusti.sh
+watch.sh
+/examples/**
+!/examples/*.rs
+!/examples/assets/
+!/target/assets/
 
-
-examples/expression
-
-examples/test_event_app
+Cargo.lock
