Reexport shader_version
Closes https://github.com/PistonDevelopers/piston/issues/560

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,3 +23,7 @@ path = "./src/lib.rs"
 
 git = "https://github.com/PistonDevelopers/vecmath"
 
+[dependencies.shader_version]
+
+git = "https://github.com/pistondevelopers/shader_version"
+
