Rexported rust-image
Closes https://github.com/pistondevelopers/rust-image

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,3 +27,7 @@ git = "https://github.com/PistonDevelopers/vecmath"
 
 git = "https://github.com/pistondevelopers/shader_version"
 
+[dependencies.image]
+
+git = "https://github.com/pistondevelopers/rust-image"
+
