Moved camera stuff to `cam` repo
Closes https://github.com/PistonDevelopers/piston/issues/551

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ git = "https://github.com/PistonDevelopers/input"
 
 git = "https://github.com/pistondevelopers/shader_version"
 
+[dependencies.cam]
+
+git = "https://github.com/pistondevelopers/cam"
+
 [dependencies.image]
 
 git = "https://github.com/pistondevelopers/rust-image"
