--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
-language: c
-env:
-  - LD_LIBRARY_PATH=/usr/local/lib:/usr/local/lib/rustlib/x86_64-unknown-linux-gnu/lib/
-install:
-  - curl www.rust-lang.org/rustup.sh | sudo bash
-script:
-  - rustc --version
-  - cargo build -v
-  - cargo test -v
+language: rust
 os:
-  - linux
+    - linux
+    - osx
+env:
+    global:
+        - LD_LIBRARY_PATH: /usr/local/lib
+before_script:
+    - rustc -v
+    - cargo -V
+script:
+    - cargo build -v
+    - cargo test -v
