Reexport gfx-rs
Closes https://github.com/PistonDevelopers/piston/issues/574

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,3 +43,7 @@ git = "https://github.com/pistondevelopers/rust-image"
 
 git = "https://github.com/pistondevelopers/rust-graphics"
 
+[dependencies.gfx]
+
+git = "https://github.com/gfx-rs/gfx-rs"
+
