Temporary fix for rust-ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,6 @@ script:
     - cargo test -v
     - cargo doc -v
 after_success:
-  - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+    - cp -R target/doc doc
+    - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+    - rm -r doc
