--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,15 @@ os:
     - osx
 env:
     global:
-        - LD_LIBRARY_PATH: /usr/local/lib
+        - secure: OrVuzgEju9wpbB3NO2qzQiT0GIgEoRUEjSk/uVbLssoticivo1kbbnlr3MdcEvfPqcFPbzY1H7/VmvRlKobU2OseIOi6tRycqJjGQh25y5goJi+88IGXuMH3kTbd7VC3SM5W/mySUyDgfbI4EHoy8x5LqvFUsSCCgPRYY/6WrFw=
 before_script:
     - rustc -v
     - cargo -V
 script:
     - cargo build -v
     - cargo test -v
+    - cargo doc -v
+after_success:
+    - cp -R target/doc doc
+    - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+    - rm -r doc
