Add IRC Notifications
Update IRC channel

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: rust
+notifications:
+    irc: "irc.mozilla.org#piston-internals"
 env:
     global:
         - secure: fetkajXgb3y9uAsgbEgmtnxwgTaifFhSwOzSYXKOj8kYnmIzU2OcQCtKoa/8zDTH3hNC6Yvg4QKF0vEopY22UP8YG4ky+QbFwEu3WcLyIZm1D1wOTnXqenyGod662bTP7fZMzDMIOu3vuUXR4SpmNJl5+k7d22SvChj2bc6V2Ok=
