Added builder methods to `Events`
Closes https://github.com/PistonDevelopers/event/issues/245

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,3 +16,7 @@ path = "src/lib.rs"
 
 git = "https://github.com/PistonDevelopers/input"
 
+[dependencies.current]
+
+git = "https://github.com/PistonDevelopers/current"
+
