Moved event loop to its own repo
Closes https://github.com/PistonDevelopers/event/issues/289

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,6 @@ git = "https://github.com/PistonDevelopers/input"
 
 git = "https://github.com/PistonDevelopers/current"
 
+[dependencies.event_loop]
+
+git = "https://github.com/PistonDevelopers/event_loop"
