Added authors to Cargo.toml
Closes https://github.com/PistonDevelopers/event_loop/issues/3

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,9 @@ name = "event_loop"
 version = "0.0.0"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
-    "Coeuvre <coeuvre@gmail.com>"
+    "Coeuvre <coeuvre@gmail.com>",
+    "gmorenz",
+    "bfops",
 ]
 tags = []
 
