--- a/.travis.yml
+++ b/.travis.yml
@@ -11,6 +11,11 @@ os:
 before_script:
     - rustc -v
     - cargo -V
+before_install:
+    - curl -O http://www.libsdl.org/release/SDL2-2.0.0.tar.gz
+    - tar -xzvf SDL2-2.0.0.tar.gz
+install:
+    - (cd SDL2-2.0.0 && ./configure && make && sudo make install)
 script:
     - cargo build -v
     - cargo test -v
