Fixed failing build caused by noise-rs crate being renamed to noise

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -89,7 +89,7 @@ git = "https://github.com/pistondevelopers/sdl2_window"
 
 git = "https://github.com/pistondevelopers/wavefront-obj"
 
-[dependencies.noise-rs]
+[dependencies.noise]
 
 git = "https://github.com/bjz/noise-rs"
 
