Reexported "img_hash"
Closes https://github.com/PistonDevelopers/piston/issues/727

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -105,3 +105,7 @@ git = "https://github.com/gfx-rs/gfx-rs"
 
 git = "https://github.com/TyOverby/wire"
 
+[dependencies.img_hash]
+
+git = "https://github.com/cybergeek94/img_hash"
+
