--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,14 @@
 [package]
 
 name = "pistoncore-event_loop"
-version = "0.0.0"
+version = "0.0.1"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
     "gmorenz",
     "bfops",
 ]
-tags = ["game", "event", "loop"]
+keywords = ["game", "event", "loop"]
 description = "A generic event loop for games and interactive applications"
 license = "MIT"
 readme = "README.md"
