--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-event_loop"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -23,8 +23,10 @@ path = "src/lib.rs"
 [dependencies.pistoncore-current]
 
 git = "https://github.com/pistondevelopers/current"
+#version = "0.0.2"
 
 [dependencies.time]
 
 git = "https://github.com/rust-lang/time"
+#version = "0.1.3"
 
