--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-input"
-version = "0.0.2"
+version = "0.0.3"
 authors = ["bvssvni <bvssvni@gmail.com>"]
 keywords = ["keyboard", "mouse", "input"]
 description = "A structure for user input"
@@ -14,4 +14,8 @@ homepage = "https://github.com/pistondevelopers/input"
 
 name = "input"
 path = "src/lib.rs"
+
+[dependencies.rustc-serialize]
+
+git = "https://github.com/rust-lang/rustc-serialize"
 
