Fixed Travis CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,7 @@ os:
     - linux
     - osx
 before_script:
-    - rustc -v
+    - rustc -V
     - cargo -V
 before_install:
     - curl -O http://www.libsdl.org/release/SDL2-2.0.0.tar.gz
