Pointing rust-sdl2 to temporary fork
See https://github.com/PistonDevelopers/piston/issues/798

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,8 @@ git = "https://github.com/pistondevelopers/sdl2_window"
 
 [dependencies.sdl2]
 
-version = "*"
+git = "https://github.com/pistondevelopers/rust-sdl2"
+#version = "*"
 
 [dependencies.gfx]
 
