--- a/Cargo.toml
+++ b/Cargo.toml
@@ -84,7 +84,8 @@ git = "https://github.com/pistondevelopers/sdl2_window"
 
 [dependencies.sdl2]
 
-git = "https://github.com/pistondevelopers/rust-sdl2"
+#git = "https://github.com/pistondevelopers/rust-sdl2"
+git = "https://github.com/AngryLawyer/rust-sdl2"
 #version = "*"
 
 [dependencies.gfx]
