--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "piston"
-version = "0.0.1"
+version = "0.0.2"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -27,18 +27,18 @@ name = "piston"
 path = "./src/lib.rs"
 
 [dependencies.pistoncore-input]
-#git = "https://github.com/pistondevelopers/input"
-version = "0.0.5"
+git = "https://github.com/pistondevelopers/input"
+#version = "0.0.5"
 
 [dependencies.pistoncore-event]
-#git = "https://github.com/pistondevelopers/event"
-version = "0.0.6"
+git = "https://github.com/pistondevelopers/event"
+#version = "0.0.6"
 
 [dependencies.pistoncore-window]
-#git = "https://github.com/pistondevelopers/window"
-version = "0.0.5"
+git = "https://github.com/pistondevelopers/window"
+#version = "0.0.5"
 
 [dependencies.quack]
-#git = "https://github.com/pistondevelopers/quack"
-version = "0.0.6"
+git = "https://github.com/pistondevelopers/quack"
+#version = "0.0.6"
 
