--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-event_loop"
-version = "0.0.11"
+version = "0.0.12"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -28,3 +28,6 @@ git = "https://github.com/pistondevelopers/quack"
 git = "https://github.com/tomaka/clock_ticks"
 #version = "0.0.2"
 
+[dependencies.pistoncore-window]
+git = "https://github.com/pistondevelopers/window"
+#version = "0.0.0"
