--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-input"
-version = "0.0.7"
+version = "0.0.8"
 authors = ["bvssvni <bvssvni@gmail.com>"]
 keywords = ["keyboard", "mouse", "input", "piston"]
 description = "A structure for user input"
@@ -19,4 +19,5 @@ path = "src/lib.rs"
 
 rustc-serialize = "*"
 bitflags = "*"
+num = "0.1.21"
 
