--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-event_loop"
-version = "0.1.1"
+version = "0.1.2"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -27,3 +27,8 @@ git = "https://github.com/tomaka/clock_ticks"
 [dependencies.pistoncore-window]
 git = "https://github.com/pistondevelopers/window"
 #version = "0.1.0"
+
+[dependencies.piston-viewport]
+git = "https://github.com/pistondevelopers/viewport"
+#version = "0.0.0"
+
