Use crates.io dependenies
See https://github.com/PistonDevelopers/piston/issues/891

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,13 +21,13 @@ name = "event_loop"
 path = "src/lib.rs"
 
 [dependencies.clock_ticks]
-git = "https://github.com/tomaka/clock_ticks"
-#version = "0.0.5"
+#git = "https://github.com/tomaka/clock_ticks"
+version = "0.0.5"
 
 [dependencies.pistoncore-window]
-git = "https://github.com/pistondevelopers/window"
-#version = "0.1.0"
+#git = "https://github.com/pistondevelopers/window"
+version = "0.1.0"
 
 [dependencies.piston-viewport]
-git = "https://github.com/pistondevelopers/viewport"
-#version = "0.0.0"
+#git = "https://github.com/pistondevelopers/viewport"
+version = "0.0.3"
