Use crates.io dependencies
See https://github.com/PistonDevelopers/piston/issues/891

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,13 +19,13 @@ name = "event"
 path = "src/lib.rs"
 
 [dependencies.pistoncore-input]
-git = "https://github.com/PistonDevelopers/input"
-#version = "0.0.9"
+#git = "https://github.com/PistonDevelopers/input"
+version = "0.0.9"
 
 [dependencies.pistoncore-event_loop]
-git = "https://github.com/PistonDevelopers/event_loop"
-#version = "0.1.0"
+#git = "https://github.com/PistonDevelopers/event_loop"
+version = "0.1.0"
 
 [dependencies.pistoncore-window]
-git = "https://github.com/PistonDevelopers/window"
-#version = "0.1.0"
+#git = "https://github.com/PistonDevelopers/window"
+version = "0.1.0"
