--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "piston"
-version = "0.1.1"
+version = "0.1.2"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -27,13 +27,13 @@ name = "piston"
 path = "./src/lib.rs"
 
 [dependencies.pistoncore-input]
-git = "https://github.com/pistondevelopers/input"
-#version = "0.0.9"
+#git = "https://github.com/pistondevelopers/input"
+version = "0.0.9"
 
 [dependencies.pistoncore-event]
-git = "https://github.com/pistondevelopers/event"
-#version = "0.1.0"
+#git = "https://github.com/pistondevelopers/event"
+version = "0.1.0"
 
 [dependencies.pistoncore-window]
-git = "https://github.com/pistondevelopers/window"
-#version = "0.1.0"
+#git = "https://github.com/pistondevelopers/window"
+version = "0.1.0"
