--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-event"
-version = "0.1.3"
+version = "0.1.4"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>"
@@ -18,14 +18,7 @@ homepage = "https://github.com/pistondevelopers/event"
 name = "event"
 path = "src/lib.rs"
 
-[dependencies.pistoncore-input]
-#git = "https://github.com/PistonDevelopers/input"
-version = "0.0.9"
-
-[dependencies.pistoncore-event_loop]
-#git = "https://github.com/PistonDevelopers/event_loop"
-version = "0.1.0"
-
-[dependencies.pistoncore-window]
-#git = "https://github.com/PistonDevelopers/window"
-version = "0.1.0"
+[dependencies]
+pistoncore-input = "0.1.0"
+pistoncore-event_loop = "0.1.0"
+pistoncore-window = "0.1.0"
