--- a/src/window/Cargo.toml
+++ b/src/window/Cargo.toml
@@ -14,12 +14,13 @@ repository = "https://github.com/pistondevelopers/window.git"
 homepage = "https://github.com/pistondevelopers/window"
 
 [lib]
-
 name = "window"
 path = "src/lib.rs"
 
-[dependencies]
+[dependencies.pistoncore-input]
+path = "../input"
+version = "0.1.0"
 
+[dependencies]
 libc = "0.1"
-pistoncore-input = "0.1.0"
 shader_version = "0.1.0"
