--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: rust
+rust:
+  - stable
+  - nightly
 script:
   - cargo build -v
   - cargo doc -v
 after_success:
-  - curl https://raw.githubusercontent.com/PistonDevelopers/docs/gh-pages/travis-doc-upload.sh | sh
+  - curl http://docs.piston.rs/travis-doc-upload.sh | sh
