--- a/src/input/Cargo.toml
+++ b/src/input/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "pistoncore-input"
-version = "0.3.0"
+version = "0.3.1"
 authors = ["bvssvni <bvssvni@gmail.com>"]
 keywords = ["keyboard", "mouse", "input", "piston"]
 description = "A structure for user input"
@@ -13,8 +13,11 @@ homepage = "https://github.com/PistonDevelopers/piston"
 name = "input"
 path = "src/lib.rs"
 
+[dependencies.num]
+version = "0.1.25"
+default-features = false
+
 [dependencies]
 rustc-serialize = "0.3.15"
 bitflags = "0.3.2"
-num = "0.1.25"
 piston-viewport = "0.1.0"
