--- a/src/event_loop/Cargo.toml
+++ b/src/event_loop/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 
 name = "pistoncore-event_loop"
-version = "0.9.0"
+version = "0.10.0"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -22,11 +22,11 @@ path = "src/lib.rs"
 
 [dependencies.pistoncore-window]
 path = "../window"
-version = "0.8.0"
+version = "0.9.0"
 
 [dependencies.pistoncore-input]
-path = "../window"
-version = "0.4.0"
+path = "../input"
+version = "0.5.0"
 
 [dependencies]
 clock_ticks = "0.0.6"
