enhancing CI through travis
testing the curl into bash

adding a cat to the curl post_success and making sure that a disconnect during a pipe shell won't do weird things

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,6 @@ rust:
   - stable
   - nightly
 script:
-  - cargo build -v
-  - cargo doc -v
+  - bash ci/script.sh
 after_success:
-  - curl http://docs.piston.rs/travis-doc-upload.sh | sh
+  - curl http://docs.piston.rs/travis-doc-upload.sh > tdu.sh && cat tdu.sh && sh tdu.sh
