--- a/src/event_loop/Cargo.toml
+++ b/src/event_loop/Cargo.toml
@@ -9,7 +9,7 @@ authors = [
     "bfops",
 ]
 keywords = ["game", "event", "loop", "piston"]
-description = "A generic event loop for games and interactive applications"
+description = "A Piston event loop for games and interactive applications"
 license = "MIT"
 readme = "README.md"
 repository = "https://github.com/PistonDevelopers/piston.git"
