Use docs.rs for documentation
- Changed link to docs
- Removed script for uploading docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,7 +21,8 @@ description = "The Piston game engine core libraries"
 license = "MIT"
 repository = "https://github.com/PistonDevelopers/piston.git"
 homepage = "https://github.com/PistonDevelopers/piston"
-documentation = "http://www.piston.rs/docs/piston/piston/index.html"
+documentation = "https://docs.rs/piston"
+readme = "README.md"
 
 [lib]
 
