--- a/src/event_loop/Cargo.toml
+++ b/src/event_loop/Cargo.toml
@@ -14,6 +14,7 @@ license = "MIT"
 readme = "README.md"
 repository = "https://github.com/PistonDevelopers/piston.git"
 homepage = "https://github.com/PistonDevelopers/piston"
+documentation = "https://docs.rs/pistoncore-event_loop"
 
 [lib]
 
