--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,3 +41,12 @@ version = "0.44.0"
 [dependencies.pistoncore-event_loop]
 path = "src/event_loop"
 version = "0.49.0"
+
+[dependencies.pistoncore-game]
+path = "src/game"
+version = "0.1.0"
+optional = true
+
+[features]
+default = []
+game = ["pistoncore-game"]
