--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-
 name = "piston"
 version = "0.53.0"
+edition = "2018"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -26,7 +26,6 @@ readme = "README.md"
 exclude = ["images/*", "Cargo.png"]
 
 [lib]
-
 name = "piston"
 path = "./src/lib.rs"
 
