--- a/src/event_loop/Cargo.toml
+++ b/src/event_loop/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-
 name = "pistoncore-event_loop"
 version = "0.53.0"
+edition = "2018"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
@@ -17,7 +17,6 @@ homepage = "https://github.com/PistonDevelopers/piston"
 documentation = "https://docs.rs/pistoncore-event_loop"
 
 [lib]
-
 name = "event_loop"
 path = "src/lib.rs"
 
