--- a/src/input/Cargo.toml
+++ b/src/input/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "pistoncore-input"
 version = "1.0.0"
+edition = "2018"
 authors = ["bvssvni <bvssvni@gmail.com>"]
 keywords = ["keyboard", "mouse", "input", "piston"]
 description = "A structure for user input"
