--- a/src/window/Cargo.toml
+++ b/src/window/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-
 name = "pistoncore-window"
 version = "0.47.0"
+edition = "2018"
 authors = [
     "bvssvni <bvssvni@gmail.com>",
     "Coeuvre <coeuvre@gmail.com>",
