Add "async" feature for async event loop
See https://github.com/PistonDevelopers/piston/issues/1392

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,9 @@ exclude = ["images/*", "Cargo.png"]
 name = "piston"
 path = "./src/lib.rs"
 
+[features]
+async = ["pistoncore-event_loop/async"]
+
 [dependencies.pistoncore-input]
 path = "src/input"
 version = "1.0.1"
