--- a/src/event_loop/Cargo.toml
+++ b/src/event_loop/Cargo.toml
@@ -20,8 +20,12 @@ documentation = "https://docs.rs/pistoncore-event_loop"
 name = "event_loop"
 path = "src/lib.rs"
 
+[features]
+async = ["dep:tokio"]
+
 [dependencies]
 spin_sleep = "1.0.0"
+tokio = {version = "1.34.0", features = ["time"], optional = true}
 
 [dependencies.pistoncore-window]
 path = "../window"
