Prepare README for release
- Removed dependency graph
- Removed example (users can use tutorials instead)
- Created issues for information that can change
- Removed goals

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ repository = "https://github.com/PistonDevelopers/piston.git"
 homepage = "https://github.com/PistonDevelopers/piston"
 documentation = "https://docs.rs/piston"
 readme = "README.md"
-exclude = ["images/*", "Cargo.png"]
+exclude = ["images/*"]
 
 [lib]
 name = "piston"
